--- a/user-cards/src/styles/styles.scss
+++ b/user-cards/src/styles/styles.scss
@@ -13,3 +13,8 @@
 
 // Blocks
 //-----------------
+@import './blocks/card';
+@import './blocks/cards-list';
+@import './blocks/dropdown';
+@import './blocks/error-message';
+@import './blocks/header';
