feat: добавляет часть компонентов и стор

--- a/user-cards/src/styles/global/variables.scss
+++ b/user-cards/src/styles/global/variables.scss
@@ -6,5 +6,6 @@ $color-gainsboro: #dadada;
 $color-nobel: #9c9c9c;
 $color-zambezi: #595959;
 $color-nero: #161616;
+$color-nero-transparent: #1717173d;
 $color-black: #000000;
 $color-pelorous: #22a0bc;
