--- a/user-cards/src/styles/styles.scss
+++ b/user-cards/src/styles/styles.scss
@@ -13,8 +13,11 @@
 
 // Blocks
 //-----------------
+@import './blocks/back-button';
 @import './blocks/card';
 @import './blocks/cards-list';
 @import './blocks/dropdown';
 @import './blocks/error-message';
 @import './blocks/header';
+@import './blocks/popup';
+@import './blocks/profile';
