--- a/user-cards/src/styles/blocks/card.scss
+++ b/user-cards/src/styles/blocks/card.scss
@@ -4,11 +4,13 @@
     height: 120px;
     width: 312px;
     display: flex;
-    justify-content: center;
     align-items: center;
+    gap: 20px;
+    background-color: $color-white;
+    border-radius: 16px;
   }
 
-  &__image {
+  &__image img {
     width: 112px;
     height: 120px;
     object-fit: cover;
@@ -17,18 +19,41 @@
 
   &__user-info {
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
+    height: 100%;
+    width: 100%;
   }
 
   &__footer {
     @include font-params-text-2(500, $color-nobel);
   }
+
+  &__controls {
+    position: relative;
+    left: 10px;
+  }
+
+  &__dropdown-toggle {
+    width: 24px;
+    height: 24px;
+
+    &:hover {
+      cursor: pointer;
+      path {
+        fill: $color-pelorous;
+      }
+    }
+  }
 }
 
 .card-info {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  max-width: 160px;
   &__name {
     @include font-params-headline($color-pelorous);
+    word-wrap: break-word;
   }
   &__company {
     @include font-params-text-2(500, $color-zambezi);
@@ -53,22 +78,3 @@
     }
   }
 }
-
-// <div className="card__container">
-//     <div className="card__image">
-//         <img src="/img/avatar.jpg" alt="user-avatar"/>
-//     </div>
-//     <div className="card__user-info">
-//         <div className="card__main-info">
-//             <div className="card-info">
-//             <span className="card-info__name">{userName}</span>
-//             <span className="card-info__name">{companyName}</span>
-//             </div>
-//             <MoreIcon/>
-//             <Dropdown isActive={isActive} id={id}/>
-//         </div>
-//         <div className="card__footer">
-//             <span>{city}</span>
-//         </div>
-//     </div>
-// </div>
