--- a/user-cards/src/styles/styles.scss
+++ b/user-cards/src/styles/styles.scss
@@ -19,5 +19,6 @@
 @import './blocks/dropdown';
 @import './blocks/error-message';
 @import './blocks/header';
+@import './blocks/loader';
 @import './blocks/popup';
 @import './blocks/profile';
