--- a/user-cards/src/styles/blocks/dropdown.scss
+++ b/user-cards/src/styles/blocks/dropdown.scss
@@ -1,13 +1,23 @@
 .dropdown-container {
+  position: absolute;
+  right: 10px;
+  width: 184px;
+  padding: 8px;
+  border-radius: 12px;
+  background-color: $color-white;
+  box-shadow: 5px 5px 10px $color-nero-transparent;
   &.dropdown-hidden {
     display: none;
   }
-  padding: 8px;
-  border-radius: 12px;
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
 
   &__option {
     padding: 8px 12px;
-    width: 184px;
     height: 22px;
     @include font-params-text-2(500, $color-nero);
 
