--- a/user-cards/src/styles/blocks/error-message.scss
+++ b/user-cards/src/styles/blocks/error-message.scss
@@ -5,6 +5,9 @@
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
