--- a/user-cards/src/styles/styles.scss
+++ b/user-cards/src/styles/styles.scss
@@ -17,6 +17,7 @@
 @import './blocks/card';
 @import './blocks/cards-list';
 @import './blocks/dropdown';
+@import './blocks/edit-form';
 @import './blocks/error-message';
 @import './blocks/header';
 @import './blocks/loader';
