--- a/user-cards/src/styles/blocks/popup.scss
+++ b/user-cards/src/styles/blocks/popup.scss
@@ -1,12 +1,12 @@
 .popup {
   &__wrapper {
-    position: absolute;
+    position: fixed;
     top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     background-color: $color-nero-transparent;
   }
 
