--- a/user-cards/src/styles/blocks/popup.scss
+++ b/user-cards/src/styles/blocks/popup.scss
@@ -2,8 +2,14 @@
   &__wrapper {
     position: fixed;
     top: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     height: 100%;
     width: 100%;
@@ -11,9 +17,18 @@
   }
 
   &__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 20px;
     padding: 40px;
@@ -36,5 +51,22 @@
   }
   &__text {
     @include font-params-headline($color-zambezi);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .popup {
+    &__container {
+      gap: 16px;
+      padding: 32px;
+      height: 125px;
+      width: 207px;
+    }
+
+    &__cross-icon {
+      position: fixed;
+      top: 38%;
+      right: 58px;
+    }
   }
 }
