--- a/user-cards/src/styles/pages/main-page.scss
+++ b/user-cards/src/styles/pages/main-page.scss
@@ -1,5 +1,8 @@
 .main-page {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
   min-height: 100vh;
   height: 100%;
   background-color: $color-white-smoke;
@@ -8,5 +11,13 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .main-page {
+    main {
+      gap: 32px;
+    }
   }
 }
