--- a/user-cards/src/styles/blocks/header.scss
+++ b/user-cards/src/styles/blocks/header.scss
@@ -2,8 +2,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -21,6 +22,11 @@
     -ms-flex-align: baseline;
     align-items: baseline;
     gap: 20px;
+    margin-right: 155px;
+  }
+
+  &__logo {
+    margin-left: 150px;
   }
 
   &__logo svg {
@@ -36,6 +42,11 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+
+  &__controls {
+    gap: 4px;
+  }
+
   &__controls > svg {
     width: 24px;
     height: 24px;
@@ -81,9 +92,14 @@
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
+    padding: 14px 0;
 
     &__logo {
       margin-left: 16px;
+    }
+
+    &__user {
+      margin-right: 0;
     }
   }
 
@@ -98,7 +114,9 @@
       display: none;
     }
     &__avatar {
-      margin-right: 11px;
+      margin-right: 16px;
+      width: 28px;
+      height: 28px;
     }
   }
 }
