--- a/user-cards/src/styles/global/mixins.scss
+++ b/user-cards/src/styles/global/mixins.scss
@@ -6,6 +6,7 @@
   border-radius: 50px;
   background-color: $color-nero;
   color: $color-white;
+  font-size: 16px;
   &:hover {
     cursor: pointer;
     background-color: $color-white-smoke;
@@ -13,6 +14,7 @@
   }
   @media screen and (max-width: 767px) {
     height: 44px;
+    font-size: 14px;
   }
 }
 
